--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "sass-loader": "^10.1.0",
+    "vue": "^3.0.0-rc.13",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@tailwindcss/ui": "^0.6.2",
+    "@types/node": "^14.14.10",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -23,10 +27,12 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "@popperjs/core": "^2.5.3",
+    "tailwindcss": "^1.9.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "prettier": "^1.19.1",
-    "typescript": "~3.9.3"
+    "typescript": "^4.1.2"
   }
 }
