--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "raxui",
   "version": "0.1.0",
   "private": true,
+  "main": "./dist/raxui.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name raxui ./src/index.ts",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
