--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.5.3",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "@tailwindcss/ui": "^0.6.2",
     "@types/node": "^14.14.10",
     "@types/vue": "^2.0.0",
@@ -28,12 +32,13 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@popperjs/core": "^2.5.3",
-    "tailwindcss": "^1.9.5",
+    "autoprefixer": "^9",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "postcss": "^7",
     "prettier": "^1.19.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2"
   }
 }
